# gitops-cicd-platform

./: .gitignore  .pre-commit-config.yaml  .yamllint.yml  LICENSE  README.md  sonar-project.properties
.github/: renovate.json
.github/workflows/: ci.yml  policy.yml  terraform.yml
apps/demo-api/: Dockerfile  pyproject.toml  requirements-dev.txt
apps/demo-api/app/: main.py
apps/demo-api/tests/: test_main.py
deployments/apps/demo-api/base/: deployment.yaml  kustomization.yaml
deployments/apps/demo-api/overlays/dev/: kustomization.yaml
deployments/apps/demo-api/overlays/prod/: analysis-template.yaml  hpa.yaml  rollout.yaml  (+1 more)
docs/: grafana-deploy-annotations.md
docs/adr/: 001-argocd-over-flux.md  002-kustomize-over-helm.md  003-kyverno-over-opa.md  004-vault-vs-cloud-secrets.md
docs/runbooks/: failed-sync.md  rollback.md
infrastructure/environments/dev/: main.tf  terraform.tfvars.example
infrastructure/modules/eks-platform/: main.tf  outputs.tf  variables.tf
platform/argo-events/: README.md  event-bus.yaml  eventsource-kafka.yaml  eventsource-webhook.yaml  kustomization.yaml  rbac.yaml  sensor-deploy.yaml  workflow-template.yaml
platform/argocd/: applicationset.yaml
platform/argocd/projects/: demo.yaml
platform/external-secrets/: cluster-secret-store.yaml  example-externalsecret.yaml  example-vault-externalsecret.yaml  vault-secret-store.yaml
platform/kyverno-policies/: disallow-latest-tag.yaml  drop-capabilities.yaml  kustomization.yaml  require-labels.yaml  verify-image-signatures.yaml
scripts/: bootstrap.sh  post-grafana-annotation.sh
(+1 files in other folders)
