[project]
name = "demo-api"
version = "0.1.0"
description = "Demo API exercising the GitOps CI/CD pipeline."
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "prometheus-client==0.20.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["."]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "S"]
ignore = ["S101", "S311"]  # pytest asserts; non-crypto randomness OK in demo

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]
